<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_vertical"
        android:text="@string/no_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/authors"
        app:layout_constraintEnd_toStartOf="@id/publishedDate"
        app:layout_constraintStart_toEndOf="@id/thumbnail"
        app:layout_constraintTop_toTopOf="@id/thumbnail"
        />

    <TextView
        android:id="@+id/publishedDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:text="@string/publish_year"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/title"
        />

    <TextView
        android:id="@+id/authors"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_vertical"
        android:text="@string/no_authors"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/space"
        app:layout_constraintEnd_toStartOf="@id/language"
        app:layout_constraintStart_toEndOf="@id/thumbnail"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/authors"
        />

    <View
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintStart_toEndOf="@id/thumbnail"
        app:layout_constraintTop_toBottomOf="@id/authors"
        app:layout_constraintBottom_toTopOf="@id/categories"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/categories"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:text="@string/categories"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/thumbnail"
        app:layout_constraintEnd_toStartOf="@id/pageCount"
        app:layout_constraintStart_toEndOf="@id/thumbnail"
        app:layout_constraintTop_toBottomOf="@id/space"
        />

    <TextView
        android:id="@+id/pageCount"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:text="@string/pageCount"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/categories"
        />

    <View
        android:id="@+id/line"
        android:layout_height="1dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="12dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>